# joal

./: .gitignore  Cargo.toml  README.md  skills-lock.json
.claude/agents/: trellis-check.md  trellis-implement.md
.claude/skills/cc-codex-spec-bootstrap/: SKILL.md
.claude/skills/diagnose/: SKILL.md
.claude/skills/review/: SKILL.md
.cursor/: hooks.json
.github/workflows/: ci.yml  release.yml  update-clients.yml
.trellis/: .template-hashes.json
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/tasks/00-bootstrap-guidelines/: prd.md  task.json
.trellis/tasks/05-10-rewrite-joal-in-rust-with-egui-frontend/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/05-12-extract-seed-manager-and-snapshot/: implement.jsonl  task.json
.trellis/tasks/05-13-extract-generic-refreshpolicy-from-keygenerator-and-peeridgenerator/: prd.md  task.json
.trellis/tasks/05-13-mvp2-egui-frontend-torrent-dashboard-with-real-time-monitoring/: check.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-05/00-bootstrap-guidelines/: task.json
.trellis/tasks/archive/2026-05/05-10-rewrite-joal-in-rust-with-egui-frontend/: task.json
.trellis/tasks/archive/2026-05/05-12-extract-seed-manager-and-snapshot/: check.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-05/05-13-cleanup-duplicate-refreshpolicy-in-key-peer-id-generators/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-05/05-13-extract-generic-refreshpolicy-from-keygenerator-and-peeridgenerator/: check.jsonl  implement.jsonl  task.json
.trellis/tasks/archive/2026-05/05-13-mvp2-egui-frontend-torrent-dashboard-with-real-time-monitoring/: implement.jsonl  task.json
.trellis/tasks/archive/2026-05/05-14-default-resources-folder-and-config-example/: prd.md  task.json
.trellis/tasks/archive/2026-05/05-14-java-rust/: task.json
.trellis/tasks/archive/2026-05/05-14-migrate-java-webui-and-missing-features-to-rust/: task.json
.trellis/tasks/archive/2026-05/05-14-readme/: task.json
.trellis/workspace/fengguowudi/: index.md  journal-1.md
crates/joal-app/: Cargo.toml  build.rs
crates/joal-app/src/: command.rs  main.rs
crates/joal-app/src/ui/: benchmark.rs  config_panel.rs  config_state.rs  i18n.rs  log_panel.rs  mod.rs  speed_chart.rs  status_bar.rs  theme.rs  torrent_table.rs  torrent_table_format.rs
crates/joal-core/: Cargo.toml
crates/joal-core/src/: bandwidth.rs  bencode.rs  config.rs  events.rs  lib.rs  seed_manager.rs  snapshot.rs
crates/joal-core/src/announcer/: error.rs  mod.rs  request.rs  response.rs  state.rs  tracker.rs
crates/joal-core/src/bandwidth/: dispatcher.rs  peers.rs  random_speed.rs  speed.rs  stats.rs  weight.rs
crates/joal-core/src/client/: bit_torrent_client.rs  config.rs  event.rs  mod.rs  provider.rs  runtime.rs
crates/joal-core/src/client/generator/: common.rs  key.rs  mod.rs  numwant.rs  peer_id.rs  refresh_policy.rs  url_encoder.rs
crates/joal-core/src/client/utils/: casing.rs  mod.rs
crates/joal-core/src/orchestrator/: announcer_executor.rs  announcer_factory.rs  client.rs  delay_queue.rs  mod.rs  response_handlers.rs
crates/joal-core/src/torrent/: mod.rs  state.rs  watcher.rs
crates/joal-core/src/ttorrent_client/: announcer_executor.rs  client.rs  delay_queue.rs  mod.rs  response_handlers.rs
crates/joal-core/tests/: announcer_http.rs  bit_torrent_client_query.rs  client_config_golden.rs  client_provider.rs  common.rs  orchestrator_end_to_end.rs  seed_manager_snapshot.rs  torrent_golden.rs
crates/joal-testing/: Cargo.toml
crates/joal-testing/src/: lib.rs
docs/: benchmark-default-200.md
resources/: config.example.json  config.json
resources/clients/: qbittorrent-5.2.0.client  qbittorrent-5.2.1.client  transmission-2.76.client  transmission-2.77.client  transmission-2.80.client  transmission-2.81.client  transmission-2.83.client  transmission-2.84.client  transmission-2.90.client  transmission-2.91.client  transmission-4.0.0.client  transmission-4.0.1.client  transmission-4.0.2.client  transmission-4.0.3.client  transmission-4.0.4.client  transmission-4.0.5.client  transmission-4.0.6.client  transmission-4.1.0.client  transmission-4.1.1.client
rust/: Cargo.toml  README.md
rust/crates/joal-app/: Cargo.toml
rust/crates/joal-app/src/: main.rs
rust/crates/joal-app/src/ui/: config_panel.rs  log_panel.rs  mod.rs  speed_chart.rs  status_bar.rs  torrent_table.rs
rust/crates/joal-core/: Cargo.toml
rust/crates/joal-core/src/: announcer.rs  bandwidth.rs  bencode.rs  client.rs  config.rs  events.rs  lib.rs  seed_manager.rs  snapshot.rs  torrent.rs
rust/crates/joal-core/src/announcer/: state.rs
rust/crates/joal-core/src/bandwidth/: dispatcher.rs  random_speed.rs  speed.rs  stats.rs  weight.rs
rust/crates/joal-core/src/client/: bit_torrent_client.rs  config.rs  error.rs  mod.rs  provider.rs  runtime.rs
rust/crates/joal-core/src/client/generator/: key.rs  mod.rs  peer_id.rs  refresh_policy.rs  url_encoder.rs
rust/crates/joal-core/src/client/utils/: casing.rs
rust/crates/joal-core/src/torrent/: watcher.rs
rust/crates/joal-core/src/ttorrent_client/: announcer_executor.rs  announcer_factory.rs  client.rs  mod.rs  response_handlers.rs
rust/crates/joal-core/tests/: announcer_http.rs  bit_torrent_client_query.rs  client_config_golden.rs  orchestrator_end_to_end.rs  torrent_golden.rs
rust/crates/joal-testing/: Cargo.toml
rust/crates/joal-testing/src/: lib.rs
scripts/client-update/: transmission_analyzer.sh
src/main/java/org/araymond/joal/core/: SeedManager.java
(+2 files in other folders)
