[package]
name = "joal-app"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "JOAL desktop app — CLI + egui front-end wrapping joal-core."

[lints]
workspace = true

[[bin]]
name = "joal-desktop"
path = "src/main.rs"

[dependencies]
joal-core = { path = "../joal-core" }

tokio = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = { workspace = true }
serde_json = { workspace = true }

eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
egui_plot = { workspace = true }
rfd = { workspace = true }

[build-dependencies]
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
